--- a/src/FacebookAutomation/appsettings.json
+++ b/src/FacebookAutomation/appsettings.json
@@ -1,6 +1,6 @@
-﻿{
+{
   "ApplicationInsights": {
-    "InstrumentationKey": ""
+    "InstrumentationKey": "cfc964c3-c53a-4cc4-b05b-b657e7b659b8"
   },
   "Data": {
     "DefaultConnection": {
