--- a/src/FacebookAutomation/appsettings.json
+++ b/src/FacebookAutomation/appsettings.json
@@ -4,7 +4,7 @@
   },
   "Data": {
     "DefaultConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=aspnet5-FacebookAutomation-28964bbd-f360-4aa8-950c-fa291b9a3637;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "ConnectionString": "Server=tcp:etransfert.database.windows.net,1433;Database=facebookpub;User ID=Math@etransfert;Password=P@ssw0rd2012;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
   },
   "Logging": {
