--- a/src/FacebookAutomation/project.json
+++ b/src/FacebookAutomation/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "userSecretsId": "aspnet5-FacebookAutomation-28964bbd-f360-4aa8-950c-fa291b9a3637",
   "version": "1.0.0-*",
   "compilationOptions": {
@@ -8,6 +8,7 @@
   "dependencies": {
     "EntityFramework.Commands": "7.0.0-rc1-final",
     "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
+    "Mandrill": "2.4.1",
     "Microsoft.ApplicationInsights.AspNet": "1.0.0-rc1",
     "Microsoft.AspNet.Authentication.Cookies": "1.0.0-rc1-final",
     "Microsoft.AspNet.Diagnostics.Entity": "7.0.0-rc1-final",
@@ -26,8 +27,8 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-rc1-final",
-    "Mandrill": "2.2.7",
-    "Newtonsoft.Json": "7.0.1"
+    "Newtonsoft.Json": "7.0.1",
+    "Sendgrid": "6.3.4"
   },
 
   "commands": {
